--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,82 +1,9 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+}
+:root {
+  font-size: 62.5%;
 }
 
 html,
@@ -86,22 +13,96 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  font-family: 'Varela Round', sans-serif;
+  font-size: var(--S6);
+  color: var(--prim-text);
+  background: var(--primary);
+}
+
+:root {
+  font-size: 62.5%;
+
+  --primary: #383a3f;
+  --prim-light: #62646a;
+  --prim-dark: #1f2124;
+  --prim-text: #ffffffe0;
+
+  --secondary: #f68657;
+  --sec-light: #f6b352;
+  --sec-dark: #be572c;
+  --sec-text: #000000e0;
+
+  --S0: 0rem;
+  --S1: 0.2rem;
+  --S2: 0.4rem;
+  --S3: 0.6rem;
+  --S4: 0.8rem;
+  --S5: 1.2rem;
+  --S6: 1.6rem;
+  --S7: 2rem;
+  --S8: 2.4rem;
+  --S9: 2.8rem;
+  --S10: 3.2rem;
+  --S11: 3.6rem;
+  --S12: 4rem;
+  --S13: 4.2rem;
+
+  --MAX: 999;
+}
+
+textarea {
+  color: #ffffffee;
+  background: #ffffff10;
+  padding: 1rem;
+}
+
+textarea:focus {
+  outline: none !important;
+  border: 1px solid #ffffff80;
+}
+
+div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+  margin: 10% auto auto auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
 }
 
 a {
+  font-size: var(--S8);
   color: inherit;
-  text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+button {
+  display: block;
+  background: var(--sec-light);
+  color: var(--primary);
+  font-weight: 600;
+  padding: 15px 20px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.9);
+  transition: all 200ms ease-in-out;
+  text-decoration: none;
+  border: none;
+  font-size: var(--S6);
+  cursor: pointer;
+  width: fit-content;
+}
+
+button:hover {
+  background: var(--secondary);
+}
+button:disabled {
+  background: var(--prim-light);
 }
